src/test/ui/proc-macro/attribute.stderr
error: attribute must be of form: #[proc_macro_derive(TraitName)]
  --> $DIR/attribute.rs:18:1
   |
LL | #[proc_macro_derive]
   | ^^^^^^^^^^^^^^^^^^^^

error: attribute must be of form: #[proc_macro_derive(TraitName)]
  --> $DIR/attribute.rs:24:1
   |
LL | #[proc_macro_derive = "foo"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: must only be one word
  --> $DIR/attribute.rs:31:5
   |
LL |     a = "b"
   |     ^^^^^^^

error: attribute must have either one or two arguments
  --> $DIR/attribute.rs:38:1
   |
LL | #[proc_macro_derive(b, c, d)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: must only be one word
  --> $DIR/attribute.rs:44:21
   |
LL | #[proc_macro_derive(d(e))]
   |                     ^^^^

error: must only be one word
  --> $DIR/attribute.rs:50:35
   |
LL | #[proc_macro_derive(f, attributes(g = "h"))]
   |                                   ^^^^^^^

error: must only be one word
  --> $DIR/attribute.rs:56:35
   |
LL | #[proc_macro_derive(i, attributes(j(k)))]
   |                                   ^^^^

error: attribute must have either one or two arguments
  --> $DIR/attribute.rs:62:1
   |
LL | #[proc_macro_derive(l, attributes(m), n)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors

